--- a/flags.html
+++ b/flags.html
@@ -105,10 +105,11 @@
 			<p>Made with love by Alan Yang </p>
 		</footer-end>
 		<div class = "icons">
-			<a href="https://www.linkedin.com/in/yang-alan/" class="fa-brands fa-linkedin"></a>
-			<a href="https://www.instagram.com/alansgraphics/" class="fa-brands fa-instagram"></a>
-			<a href="https://open.spotify.com/playlist/1tUbye7CzDSrUe9zwl8Azh?si=f34829fa9c324e10" class="fa-brands fa-spotify"></a>
+			<a href="https://www.linkedin.com/in/yang-alan/" class="fa-brands fa-linkedin" aria-label="Linkedin Button"></a>
+			<a href="https://www.instagram.com/alansgraphics/" class="fa-brands fa-instagram" aria-label="Instagram Button"></a>
+			<a href="https://open.spotify.com/playlist/1tUbye7CzDSrUe9zwl8Azh?si=f34829fa9c324e10" aria-label="Spotify Button" class="fa-brands fa-spotify"></a>
 		</div>
 	</footer>
+
 </body>
 </html>
