--- a/index.html
+++ b/index.html
@@ -79,14 +79,32 @@
 	
 			<p>By generating awareness and educating people about the queer community, "Love is Love" can help drive equality for all, especially for queer youth. </p>	
 		</div>
+	
+		<div class="flip1">
+			<div class="flip-card" tabindex="0">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<img src="images/pridekissing.jpg" alt="Pride parade, girls kissing" style="width:200px;height:200px;">
+					</div>
+					<div class="flip-card-back">
+						<h3>Pride Parades</h3>
+						<p>Pride parades happen in over 30 countries!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class = "countdown-container">
+			<div class = "countdown-style">
+				<h3>Days Until Pride Month</h3>
+				<p id="countdown"></p>
+			</div>
+		</div>		
+		
 	</main>
 	
-	<div class = "countdown-container">
-		<div class = "countdown-style">
-			<h2>Days Until Pride Month</h2>
-			<p id="countdown"></p>
-		</div>
-	</div>
+
+
 	
 
 	<script>
